# makebeliv

./: .dockerignore  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  Dockerfile.cpu  README.md  USAGE.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: ARCHITECTURE.md  CLAUDE.md  DECISIONS.md  DESIGN.md  TODO.md
models/: README.md
python/: __init__.py  api_server.py  file_processor.py  fluctuation.py  rvc_engine.py
scripts/: docker-run.sh  setup.sh  test.sh
src/: audio.rs  client.rs  lib.rs  main.rs
